Subjectwise average feedback has been completed.

--- a/StudentSupport/templates/faculty/faculty_dashboard.html
+++ b/StudentSupport/templates/faculty/faculty_dashboard.html
@@ -83,12 +83,12 @@
                         </a>
                         <ul class="pcoded-submenu">
                             <li class=" ">
-                                <a href="{% url 'faculty_view_detailed_feedback' type="mid-sem" %}">
+                                <a href="{% url 'faculty_view_detailed_feedback' type="mid" %}">
                                     <span class="pcoded-mtext">Mid Semester</span>
                                 </a>
                             </li>
                             <li class=" ">
-                                <a href="{% url 'faculty_view_detailed_feedback' type="end-sem" %}">
+                                <a href="{% url 'faculty_view_detailed_feedback' type="end" %}">
                                     <span class="pcoded-mtext">End Semester</span>
                                 </a>
                             </li>
@@ -103,12 +103,12 @@
                         </a>
                         <ul class="pcoded-submenu">
                             <li class=" ">
-                                <a href="{% url 'faculty_view_average_feedback' type="mid-sem" %}">
+                                <a href="{% url 'faculty_view_average_feedback' type="mid" %}">
                                     <span class="pcoded-mtext">Mid Semester</span>
                                 </a>
                             </li>
                             <li class=" ">
-                                <a href="{% url 'faculty_view_average_feedback' type="end-sem" %}">
+                                <a href="{% url 'faculty_view_average_feedback' type="end" %}">
                                     <span class="pcoded-mtext">End Semester</span>
                                 </a>
                             </li>
