--- a/StudentSupport/templates/hod/Average_Feedback/average_feedback_mid_sem.html
+++ b/StudentSupport/templates/hod/Average_Feedback/average_feedback_mid_sem.html
@@ -157,6 +157,7 @@
                         </div>
                         <div class="col-sm-8 col-md-8 col-lg-8 m-t-20">
                             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#download-report-modal">Download Report</button>
+                            <a class="btn btn-outline-primary" href="{% url 'hod_subjectwise_average_feedback' type="mid" dept_id=dept_id %}">View subjectwise feedback</a>
                         </div>
                         <div class="col-sm-4 d-flex justify-content-end">
                             <a class="btn btn-round btn-outline-primary" href="{% url 'hod_dashboard' %}">
