--- a/StudentSupport/templates/students/dashboard_student.html
+++ b/StudentSupport/templates/students/dashboard_student.html
@@ -87,12 +87,12 @@
                     </a>
                     <ul class="pcoded-submenu">
                         <li class="">
-                            <a href="{% url 'student_feedback_section' type='mid-sem'  %}">
+                            <a href="{% url 'student_feedback_section' type='mid'  %}">
                                 <span class="pcoded-mtext">Mid Semester Feedback</span>
                             </a>
                         </li>
                         <li class="">
-                            <a href="{% url 'student_feedback_section' type='end-sem'  %}">
+                            <a href="{% url 'student_feedback_section' type='end'  %}">
                                 <span class="pcoded-mtext">End Semester Feedback</span>
                             </a>
                         </li>
