--- a/StudentSupport/templates/todo.html
+++ b/StudentSupport/templates/todo.html
@@ -2,102 +2,36 @@
     // TODO : make validation supported in chrome as well.
     // TODO : Add removed faculties by hod in manage departments.
     // TODO : Add removed subjects by hod in manage departments.
-    // TODO : Add loader wherever can be possible.
 
     // TODO : Django Admin Customization.
     // TODO : Remove all unnecessary css and js from bower components and assets as well.
 
-    /* TODO : Email encoding in change password.
-       TODO : General Department and Applied mechanics.
-       TODO : Ask karshan sir for 2 divisions of mechanical department.
-       TODO : General department can download report department wise
-     */
 
     // TODO : Change all buttons to outline primary buttpns if looks good.
 
     // TODO : Build Logging system for every action and also for error recovery.
-    // TODO : HOD Manage Department Javascript Modify.
-    // TODO : Implement base templates system. and change in all templates.
-    // TODO : Committees in every dashboard is still pending and also committee dashboard is also pending.
     // TODO : Make all the buttons consistent.
-    // TODO : Display at faculty side to let them know that which subjects are they taking. give link in quick links section and make new page with datatable.
     // TODO : Make tour for every dashboard and every page.
     // TODO : Change Email Templates.
     // TODO : make seperate pages for feedback for general department, mechanical department as well as applied mechanics department.
-    // TODO : Make editable table as shown in manage department for prinicpal
     // TODO : Update all the icons accordingly use feather or icofont or font awesome.
     // TODO : If anywhere mechanical department comes than give choice of choosing division.
     // TODO : Internal Documentation like comments in all pages and every where.
     // TODO : necessary mails should be sent to recepeitns
 
 </script>
-<!-- TODO : Change every back to dashboard from this. -->
-<div class="col-sm-4 col-md-4 col-lg-4">
-    <span class="f-right">
-        <a href="{% url 'student_dashboard' %}" class="btn" style="font-size: 15px">
-            <i class="feather icon-arrow-left"></i>
-            Back to Dashboard
-        </a>
-    </span>
-</div>
-
-
-Replace this navbar with below
-<nav class="navbar header-navbar pcoded-header">
-                <div class="navbar-wrapper">
-                    <div class="navbar-container container-fluid p-l-0 d-inline">
-                    <div class="navbar-logo">
-                    <a class="mobile-menu" id="mobile-collapse" href="javascript:void(0)">
-                        <i class="feather icon-menu"></i>
-                    </a>
-                    <a href="{% url 'hod_dashboard' %}">
-                        <img class="img-fluid" src="{% static 'assets/images/logo_sss3.png' %}" alt="Theme-Logo" style="max-width:92%;">
-                    </a>
-                </div>
-                        <ul class="nav-right">
-                        <li class="user-profile header-notification">
-                            <div class="dropdown-primary dropdown">
-                                <div class="dropdown-toggle" data-toggle="dropdown">
-                                    <span>{{ name }}</span>
-                                    <i class="feather icon-chevron-down"></i>
-                                </div>
-                                <ul class="show-notification profile-notification dropdown-menu" data-dropdown-in="fadeIn" data-dropdown-out="fadeOut">
-                                    <li>
-                                        <a href="{% url 'hod_profile' %}">
-                                            <i class="feather icon-user"></i> Profile
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="{% url 'logout' %}">
-                                            <i class="feather icon-log-out"></i> Logout
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                    </ul>
-                    </div>
-                </div>
-            </nav>
-
 <script>
-    Remaining Stuffs
+    //Remaining Stuffs
     //TODO : News in all department.
     //TODO : News section in faculty, hod and principal department.
     //TODO : Give principal right to delete and change news floating around.
     //TODO : change email templates.
     //TODO : Contact us page and issue page. (Kinjal And jasmin)
     //TODO : Courtesy page. (Kinjal)
-    //TODO : Change ccommittee widgets in every dashboard.
-    //TODO : Base templates extending.
     //TODO : Change button and make consistent in every dashboard and in every page.
     //TODO : Internal Documentation in each page.
     //TODO : Removed faculty in removed subjects
-    //TODO : Add loaders in pages.
     //TODO : Subject wise average ratings.
-    //TODO : all select should be changed to custom-select
-    //TODO : reload every page after sweet alert as in chrome previous action gets repeated.
-    //TODO : Error handling in download reports
     //TODO :
 </script>
 
