--- a/StudentSupport/templates/hod/hod_dashboard.html
+++ b/StudentSupport/templates/hod/hod_dashboard.html
@@ -75,12 +75,12 @@
                         </a>
                         <ul class="pcoded-submenu">
                             <li class=" ">
-                                <a href="{% url 'hod_view_detailed_feedback' type='mid-sem' %}">
+                                <a href="{% url 'hod_view_detailed_feedback' type='mid' %}">
                                     <span class="pcoded-mtext">Mid Semester</span>
                                 </a>
                             </li>
                             <li class=" ">
-                                <a href="{% url 'hod_view_detailed_feedback' type='end-sem' %}">
+                                <a href="{% url 'hod_view_detailed_feedback' type='end' %}">
                                     <span class="pcoded-mtext">End Semester</span>
                                 </a>
                             </li>
@@ -95,12 +95,12 @@
                         </a>
                         <ul class="pcoded-submenu">
                             <li class=" ">
-                                <a href="{% url 'hod_view_average_feedback' type='mid-sem' %}">
+                                <a href="{% url 'hod_view_average_feedback' type='mid' %}">
                                     <span class="pcoded-mtext">Mid Semester</span>
                                 </a>
                             </li>
                             <li class=" ">
-                                <a href="{% url 'hod_view_average_feedback' type='end-sem' %}">
+                                <a href="{% url 'hod_view_average_feedback' type='end' %}">
                                     <span class="pcoded-mtext">End Semester</span>
                                 </a>
                             </li>
